# Mundial_Desafio2

./: Desafio Info II 2026-1 (1).docx  DiagramaClases_UdeAWorldCup.docx  README.md  diagrama de clases udeaworldcup
UdeAWorldCup/: CMakeLists.txt  Lista.cpp  Lista.h  bombo.cpp  bombo.h  confederacion.cpp  confederacion.h  equipo.cpp  equipo.h  estadisticajugador.cpp  estadisticajugador.h  fecha.cpp  fecha.h  grupo.cpp  grupo.h  jugador.cpp  jugador.h  jugadores_actualizados.csv  main.cpp  organizadortorneo.cpp  organizadortorneo.h  partido.cpp  partido.h  recursos.cpp  recursos.h  registrojugadorpartido.cpp  registrojugadorpartido.h  selecciones_clasificadas_mundial.csv  torneo.cpp  torneo.h
